--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 500px;
   position: relative;
   margin: auto;
 }
@@ -1686,14 +1686,32 @@ input, select, textarea {
 		/*background: #ffffff;
 		border-bottom: solid 1px #ccc;*/
 		padding: 2.75em 1.75em 2.75em 1.75em;
-	}
+}
 
 		.box .image.featured {
-			position: relative;
-			width: 145%;
+      position: relative;
+      margin-left: auto;
+      margin-right: auto;
+      width: 10%;
+      /*
+
 			left: 1.75em;
 			top: 1.75em;
 			margin: -4.5em 0 4.25em -3.5em;
+      */
+		}
+
+    .box .news.featured {
+      position: relative;
+      margin-left: auto;
+      margin-right: auto;
+      width: 10%;
+      /*
+
+			left: 1.75em;
+			top: 1.75em;
+			margin: -4.5em 0 4.25em -3.5em;
+      */
 		}
 
 		.box.post header {
@@ -1714,6 +1732,7 @@ input, select, textarea {
 		.box footer ul.actions {
 			margin-bottom: 0;
 		}
+
 
 /* Button */
 
